--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ code {
     monospace;
 }
 
+.App {
+  margin-left: 3vw;
+}
+
+section {
+  margin:  2vw 2vw 2vw 0;
+  display: flex;
+}
+
 .underline {
   text-decoration: solid underline black 1px;
 }
@@ -20,11 +29,49 @@ code {
   text-transform: uppercase;
 }
 
-h5 {
-  padding: none;
+h1 {
+  font-size: 80px;
+  margin-bottom: 0;
 }
 
-.cardContainer {
-  display: flex;
+input {
+  background: black;
+  color: white;
+  font-size: 34px;
+  width: 310px;
 }
+
+button {
+  height: 45px;
+  width: 120px;
+  font-size: 30px;
+  color: white;
+
+}
+
+h3 {
+  margin-bottom: 0;
+}
+
+h5 {
+  margin: 0 0 2vw 0;
+}
+
+.profileImage {
+  margin-right: 3vw;
+}
+
+.cardsContainer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  text-align: center;
+}
+
+.card img {
+  width: 10vw;
+  margin: 0 1vw 0 0;
+
+}
+
 
